# bpf-verifier

./: .containerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Containerfile  Dockerfile  HACKATHON.md  Makefile  README.md  askama.toml  build.rs  docker-compose.yml
.claude/skills/bpf/: SKILL.md
.claude/skills/generate-bpf-code/: SKILL.md
fstar/: BPF.Check.NullSafety.fst  BPF.Check.StackBounds.fst  BPF.Check.TypeSafety.fst  BPF.Exec.Path.fst  BPF.Exec.Safe.fst  BPF.Helpers.fst  BPF.Provenance.fst  BPF.Semantics.fst  BPF.Spec.fst  BPF.State.fst  BPF.Tactic.Layered.fst  BPF.Tactic.fst  BPF.Verify.fst  BPF.Witness.fst
fstar/ast/: BPF.AST.Decl.fst  BPF.AST.Elaborate.fst  BPF.AST.Expr.fst  BPF.AST.Stmt.fst  BPF.AST.Surface.fst  BPF.AST.Tactic.fst  BPF.AST.Types.fst  BPF.Helpers.fst  BPF.Integers.fst  BPF.Range.fst  BPF.Tnum.fst  BPF.ValClass.fst  BPF.VarCtx.fst
fstar/tests/: Test.ChunkedProof.fst  Test.ExecSafe.fst  Test.NullSafetyCheck.fst  Test.ReturnZero.fst  Test.StackBoundsCheck.fst  Test.TypeSafetyCheck.fst
src/: lib.rs  main.rs
src/analysis/: dataflow.rs  mod.rs  stack_bounds.rs
src/ast/: clang_ast.rs  convert.rs  emit.rs  emit_surface.rs  fstar_ast.rs  load.rs  mod.rs
src/bpf/: basic_block.rs  helpers.rs  instruction.rs  mod.rs
src/codegen/: fstar.rs  mod.rs
src/elf/: parser.rs
src/kverify/: check.rs  error.rs  mod.rs  state.rs
src/verify/: diagnostic.rs  mod.rs  runner.rs
templates/: verify.fst
testdata/: ctx_access.c  simple_filter.c
tests/: corpus.rs  integration.rs
tests/helpers/: elf_builder.rs  mod.rs
(+94 files in other folders)
