[package]
name = "bpf-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
object = { version = "0.36", features = ["read", "write", "elf"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tempfile = "3"
askama = "0.15.6"

[dev-dependencies]
assert_cmd = "2"
datatest-stable = "0.2"

[[test]]
name = "corpus"
harness = false
